CMAKE_MINIMUM_REQUIRED( VERSION 3.30 )
PROJECT( FileMeta )

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_BUILD_TYPE "Release")

SET(CMAKE_PREFIX_PATH "${CMAKE_SOURCE_DIR}/external/sqlite3")

ADD_LIBRARY(sqlite3 STATIC ${PROJECT_SOURCE_DIR}/external/sqlite3/sqlite3.c)

TARGET_INCLUDE_DIRECTORIES(sqlite3 PUBLIC ${PROJECT_SOURCE_DIR}/external/sqlite3)

ADD_EXECUTABLE( filemeta ${PROJECT_SOURCE_DIR}/src/main.cc )
TARGET_LINK_LIBRARIES( filemeta PRIVATE sqlite3 )